--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,54 @@
 /* 
     Paleta de cores.
 
-    Verde:49a09d
-    Lilás:5f2c82
+    Verde:#49a09d
+    Lilás:#5f2c82
 */
+
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body,html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px black;
+
+}
+
+section#login > div#imagem {
+    background: #5f2c82 url(../imagens/teclado.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+    display: block;
+
+}
+
+section#login > div#formulario {
+    padding: 10px;
+    display: block;
+}
 
