--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,6 +39,9 @@ section#login {
     overflow: hidden;
     box-shadow: 0px 0px 10px black;
 
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
+
 }
 
 section#login > div#imagem {
