--- a/estilos/mediaquerie.css
+++ b/estilos/mediaquerie.css
@@ -9,6 +9,7 @@
 
     section#login {
         width: 80vw;
+        height: 320px;
     }
 
     section#login > div#imagem {
@@ -38,6 +39,7 @@
     
     section#login {
         width: 960px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -56,7 +58,8 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 10px 0px;
     }
 }
 
